--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,75 @@
+/* -----------------------------------------------------------------------------
+  FOUNDATION
+============================================================================= */
+
+html {
+  font-size: 10px;
+  box-sizing: border-box;
+}
+
 * {
-  color: crimson;
+  margin: 0;
+  padding: 0;
+}
+
+* + * { margin-top: 1rem }
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+/* -----------------------------------------------------------------------------
+  TYPOGRAPHY
+============================================================================= */
+
+body {
+  font-size: 1.8rem;
+  font-family: sans-serif;
+  color: #222;
+}
+
+.arabic {
+  font-family: 'Lateef', cursive;
+  font-weight: normal;
+}
+
+h1 + p {
+  margin-top: 0;
+}
+
+/* -----------------------------------------------------------------------------
+  LAYOUT
+============================================================================= */
+
+header,
+main,
+footer {
+  width: 90%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* -----------------------------------------------------------------------------
+  ELEMENTS
+============================================================================= */
+
+ul {
+  margin: -.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+li {
+  flex: 1 1 25rem;
+  border: 1px solid crimson;
+  padding: 1rem;
+  margin: .5rem;
+  list-style: none;
+}
+
+li h2 {
+  text-align: center;
+  font-size: 10rem;
 }
